--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cy:opennpm": "cypress open"
+    "cy:open": "cypress open"
   },
   "author": "Ana Carollyne Guimarães de Souza",
   "license": "ISC",
